Fix cramped

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -28,5 +28,6 @@ ul {
 
 .container {
   max-width: var(--max-width);
+  padding: 0 10px;
   margin: 0 auto;
 }
